# bernoulli-types

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
book/: BOOK_STRUCTURE.md  FINAL_STATUS.md  bibliography_v1.tex  book_insights_for_papers.md  compilation_log.txt  create_stubs.sh  editorial_review.md  final_review_v1.md  main.tex  main_volume1.tex  main_volume1_old.tex  notation.tex  preface.tex  preface_volume1.tex  production_fixes_summary.md  references.bib  revision_action_plan.md
book/appendices/: code_repository.tex  math_background.tex  notation_guide.tex  prerequisites.tex  quick_reference.tex  quick_reference_v1.tex  unified_notation.tex
book/chapters/: ch01_approximation_advantage.tex  ch02_hashing_to_hiding.tex  ch03_privacy_problem.tex  ch04_adaptive_frequency_normalization.tex  ch04_deep_dive_advanced_concepts.tex  ch04_enhancement_oblivious_io.tex  ch04_first_oblivious_system.tex  ch04_fully_oblivious_operations.tex  ch04_implementation_references.tex  ch04_regular_types_tension.tex  ch05_mathematical_bridge.tex  ch06_comprehensive_review.tex  ch06_hash_constructions.tex  ch07_composition_errors.tex  ch08_oblivious_bridge.tex  ch09_data_structure_zoo.tex  ch10_query_processing.tex  ch11_private_information_retrieval.tex  ch12_system_integration.tex  ch13_performance_engineering.tex  ch14_case_studies.tex  ch15_advanced_techniques.tex  ch16_road_ahead.tex  roadmap_future_volumes.tex
book/chapters/old_versions/: ch01_approximation_advantage.tex  ch01_approximation_advantage_old.tex  ch01_approximation_advantage_revised.tex  ch02_hashing_to_hiding.tex  ch02_hashing_to_hiding_revised.tex  ch03_privacy_problem.tex  ch04_first_oblivious_system.tex  ch05_bernoulli_type_theory.tex
book/diagrams/: additional_diagrams.tex  generate_diagrams.py  generate_tikz_diagrams.py  part1_diagrams.tex
book/running_example/: document_search.py  private_document_search.md
cmake/: BernoulliTypesConfig.cmake.in
docs/: examples.md  implementation.md  theory.md
examples/: CMakeLists.txt  basic_usage.cpp  bloom_filter_demo.cpp  hash_map_example.cpp  hash_set_example.cpp
include/bernoulli/: bloom_filter.hpp  count_min_sketch.hpp  hash_map.hpp  hash_set.hpp  hash_set_builder.hpp  minhash.hpp  observed_bool.hpp  observed_map.hpp  observed_set.hpp
other/: consolidated_historical.tex  references.bib
other/first_order_random_approximate_sets/: README.md  TODO.md  custom.sty  main.lof  main.lot  main.nlo  main.tex
other/first_order_random_approximate_sets/sections/: algebra_of_sets.tex  aset_model.tex  aset_theory.tex  derived_distributions.tex  first_order_model.tex
other/first_order_random_approximate_sets/sections/unused/: other.tex
other/random_approximate_set_model/sections/: first_order_model.tex
other/second_order_random_approximate_sets/: custom.sty  journal.txt  main.tex  paper.tex  references.bib
other/second_order_random_approximate_sets/research/: approx_set_prec.nb
other/second_order_random_approximate_sets/sections/: aset_model.tex  aset_theory.tex  derived_distributions.tex  first_order_model.tex  interval.tex
papers/: 01_foundations_bernoulli_types.tex  01_foundations_bernoulli_types_streamlined.tex  02_bernoulli_sets_algebra.tex  02_bernoulli_sets_algebra_streamlined.tex  03_bernoulli_maps_universal.tex  03_bernoulli_maps_universal_streamlined.tex  04_regular_types_bernoulli.tex  04_regular_types_bernoulli_streamlined.tex  05_bernoulli_search_retrieval.tex  05_bernoulli_search_retrieval_streamlined.tex  06_entropy_maps_implementation.tex  06_entropy_maps_implementation_streamlined.tex  07_statistical_analysis_bernoulli.tex  07_statistical_analysis_bernoulli_streamlined.tex  Makefile  OBLIVIOUS_SERIES_OUTLINE.md  README.md  UNIFIED_HASH_INSIGHTS.md  references.bib  unified_notation.tex
papers/bernoulli_series/: 01_foundations_bernoulli_types.tex  02_bernoulli_sets_algebra.tex  02_bernoulli_sets_enhanced.tex  03_bernoulli_maps_composition.tex  04_regular_bernoulli_types.tex  05_bernoulli_search_retrieval.tex  06_implementation_applications.tex  07_case_study_statistics.tex  Makefile  appendix_cheat_sheet.tex  bernoulli_addendum_hash_construction.tex  unified_notation.tex
papers/bridge_paper/: Makefile  bridge_hash_bernoulli_oblivious.tex
papers/canonical/: README.md  canonical_notation.tex  paper1_latent_observed.tex  paper2_asymptotic_privacy.tex  paper3_hash_constructions.tex  paper4_bernoulli_sets.tex  references.bib
papers/gap_filling/: 01_theoretical_bridge.tex  06_pedagogical_guide.tex  book_evaluation.md  book_structure_draft.md  enhanced_gap_analysis.md  paper_interconnections.md  progression_map.md
papers/oblivious_series/: 01_foundations_oblivious_computing.tex  01_foundations_oblivious_computing_enhanced.tex  02_secure_indexes_enhanced.tex  02_secure_indexes_oblivious_bernoulli.tex  03_network_protocols_enhanced.tex  03_oblivious_data_structures.tex  04_cipher_boolean_rings.tex  04_oblivious_random_oracles.tex  04_scalable_architectures_enhanced.tex  04_trapdoor_cipher_oblivious_sets.tex.backup  05_private_information_retrieval.tex  05_real_world_applications_enhanced.tex  06_applications_systems.tex  06_economic_analysis_enhanced.tex  Makefile  oblivious_addendum_uniform_encoding.tex  paper_preamble.tex  references.bib  supplemental_boolean_constructions.tex  unified_notation_oblivious.tex
tests/: CMakeLists.txt  test_hash_set.cpp  test_observed_bool.cpp  test_rate_span.cpp
